First pass arouter flume impl